fix  favicon.ico promblem.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
 		<head>
 					<meta charset='utf-8'>
 			  		<title> Kang </title>
+			  		<!-- <script type="text/javascript"></script> -->
+			  		<!-- <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script> -->
+  
 					<!-- for use var text1= $('#text1').val(); otherwise  ReferenceError: $ is not defined -->
 					<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>   	
 					<!-- for use  D3 Drawning   -->
